--- a/css/main.css
+++ b/css/main.css
@@ -61,3 +61,27 @@ footer{
 
 /* Estilos comentarios */
 
+#data{
+
+  background-color: rgba(255, 0, 165, 0.4); 
+  border: none;
+  margin: 20px 0;
+  width: 100%;
+} 
+#data p, #data h3{
+  color: white;
+}
+#data p{
+  border-bottom: 5px solid white;
+  font-size: 1.5em;
+  font-family: 'Courgette', cursive;
+
+}
+
+#data h3{
+  text-align: left;
+  margin-left: 30px;
+  font-family: 'Open Sans Condensed', sans-serif;
+  
+}
+
